Finished chapter 17.  Implemented grouping, unary and binary expression parsing and compiling to bytecode.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ project(cpplox VERSION 1.0)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_BUILD_TYPE debug)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20 -Wc99-designator")
 
 # sources
 file(GLOB source_glob src/*.cc)
@@ -18,3 +18,6 @@ add_executable(cpplox ${SOURCES})
 
 # includes
 target_include_directories(cpplox PRIVATE include)
+
+set_property(TARGET cpplox PROPERTY CXX_STANDARD 20)
+# set_property(TARGET cpplox PROPERTY C_STANDARD 99)
